[package]
name = "actix-limiter"
version = "0.1.0"
edition = "2024"
authors = [
    "Matthew Meszaros <meszmatew@gmail.com>",
]
description = "Rate limiter using a fixed window counter for arbitrary keys, created for Actix Web"
keywords = ["actix-web", "rate-api", "rate-limit", "limitation"]
categories = ["asynchronous", "web-programming"]
repository = "https://github.com/meszmate/actix-limiter"

[features]
default = ["session"]
session = ["actix-session"]

[dependencies]
actix-utils = "3"
actix-web = { version = "4", default-features = false, features = ["cookies"] }

chrono = "0.4"
derive_more = { version = "2", features = ["display", "error", "from"] }
log = "0.4"
deadpool-redis = { version = "0.22", features = ["tokio-comp"] }
redis = { version = "0.32", default-features = false, features = ["tokio-comp"] }
time = "0.3"

# session
actix-session = { version = "0.10", optional = true }

[dev-dependencies]
actix-web = "4"
static_assertions = "1"
uuid = { version = "1", features = ["v4"] }